GEOS-3724
git-svn-id: http://svn.codehaus.org/geoserver/trunk@13809 ef1d6e69-97e5-0310-af46-8a06194da32a

Former-commit-id: 7083890b1aa5542be3e3dc6f95e152bd2dbec5f7 [formerly 8df051097e7e74be3d6c50ab024153c2609231f1]
Former-commit-id: 33201090a5ee6564d0b62388ff3a84f1ad9fe722