@@ -9,6 +9,7 @@ import java.awt.geom.Point2D;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.util.Calendar;
+import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 
@@ -131,11 +132,11 @@ public class GetMapKvpRequestReaderTest extends KvpRequestReaderTestSupport {
         assertEquals(1, request.getBuffer());
 
         assertEquals(PaletteManager.safePalette, request.getPalette().getIcm());
-        assertEquals(new Integer(4), request.getElevation());
+        assertEquals(Integer.valueOf(4), request.getElevation());
         
         Calendar cal = Calendar.getInstance();
         cal.set(2006, 1, 27, 22, 8, 12);
-        List times = request.getTime();
+        List<Date> times = request.getTime();
         assertEquals(1, request.getTime().size());
         assertEquals(cal.getTime().toString(), times.get(0).toString());
     }
